# covid19-bumn

./: .replit  demo.txt  pyproject.toml
datascraper/: main.py  model.py  names.csv  template.py  util.py
datascraper/custom/: ciamis.py  kabbogor.py  kabcianjur.py  kabgarut.py  kabsukabumi.py  kotabandung.py
datascraper/exporter/: creds.json  csvexporter.py  spreadexporter.py
datascraper/results/: 2020-04-15 10:23:44.719671  2020-04-15 10:32:00.230128  2020-04-15 10:34:27.119949  2020-04-15 10:37:17.054639  2020-04-15 11:06:35.100382
puskesmas/: main.py  puskesmas_jabar.csv  puskesmas_result2.csv
