[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["M. Aufa Husen R. <aufahr@gmail.com>"]
description = ""
name = "covid19-bumn"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
googlemaps = "^4.2"
lxml = "^4.5"
python = "^3.7"
gspread-db = "^1.2"
oauth2client = "^4.1"
google-api-python-client = "^1.8"
google-nucleus = "^0.5.0"
[tool.poetry.dev-dependencies]
